--- a/app/src/main/res/layout/activity_short_pays.xml
+++ b/app/src/main/res/layout/activity_short_pays.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,7 +12,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageView
@@ -20,8 +21,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_weight="1"
-                android:src="@tools:sample/avatars"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:src="@drawable/baseline_bathtub_24"
+                app:srcCompat="@drawable/baseline_bathtub_24" />
 
             <TextView
                 android:id="@+id/shortdetailspays_paysname_text"
