--- a/app/src/main/res/layout/activity_short_pays.xml
+++ b/app/src/main/res/layout/activity_short_pays.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/shortdetailspays_cardView"
@@ -20,6 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp"
                 android:layout_weight="1"
                 android:src="@drawable/baseline_bathtub_24"
                 app:srcCompat="@drawable/baseline_bathtub_24" />
