--- a/app/src/main/res/layout/activity_short_pays.xml
+++ b/app/src/main/res/layout/activity_short_pays.xml
@@ -8,38 +8,53 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/shortdetailspays_cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="105dp">
 
             <ImageView
                 android:id="@+id/shortdetailpays_flag_ImageView"
-                android:layout_width="wrap_content"
+                android:layout_width="225dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginVertical="10dp"
-                android:layout_weight="1"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerInside"
                 android:src="@drawable/baseline_bathtub_24"
-                app:srcCompat="@drawable/baseline_bathtub_24" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.533" />
 
             <TextView
                 android:id="@+id/shortdetailspays_paysname_text"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
+                android:layout_marginStart="8dp"
                 android:text="France"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/shortdetailpays_flag_ImageView"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="France" />
 
             <CheckBox
                 android:id="@+id/shortdetailspays_favory_checkbox"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="10dp"
-                android:button="@drawable/favory_add" />
-        </LinearLayout>
+                android:layout_height="0dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginEnd="24dp"
+                android:button="@drawable/favory_add"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/shortdetailspays_paysname_text"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 </FrameLayout>
