--- a/app/src/main/res/layout/activity_jeu_bonus.xml
+++ b/app/src/main/res/layout/activity_jeu_bonus.xml
@@ -6,14 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="409dp"
+        android:layout_height="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.065" />
+    <HorizontalScrollView
+        android:layout_width="309dp"
+        android:layout_height="636dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/jeu_bonus_recyclerview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            tools:itemCount="2"
+            tools:listitem="@layout/activity_jeu_bonus_reponses">
+        </androidx.recyclerview.widget.RecyclerView>
+    </HorizontalScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
