--- a/app/src/main/res/layout/activity_jeu_bonus.xml
+++ b/app/src/main/res/layout/activity_jeu_bonus.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.065" />
     <HorizontalScrollView
-        android:layout_width="309dp"
+        android:layout_width="match_parent"
         android:layout_height="636dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
