--- a/app/src/main/res/layout/activity_jeu_bonus_reponses.xml
+++ b/app/src/main/res/layout/activity_jeu_bonus_reponses.xml
@@ -3,54 +3,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_width="match_parent"
+    android:layout_width="900dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/jeu_bonus_nom_pays"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:layout_weight="1"
         android:background="@drawable/baseline_square_24"
         android:gravity="center"
         android:text="France" />
 
     <TextView
-        android:id="@+id/square2"
+        android:id="@+id/jeu_bonus_region"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
+        android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24"
         android:gravity="center"
         android:text="Europe" />
 
     <TextView
-        android:id="@+id/square3"
+        android:id="@+id/jeu_bonus_sous_region"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
+        android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24"
         android:gravity="center"
         android:text="Europe de l'ouest" />
 
     <TextView
-        android:id="@+id/square4"
+        android:id="@+id/jeu_bonus_capitale"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
+        android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24"
         android:gravity="center"
-        android:text="Europe de l'ouest" />
+        android:text="Paris" />
 
     <TextView
-        android:id="@+id/square3"
+        android:id="@+id/jeu_bonus_monnaie"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
+        android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24"
         android:gravity="center"
-        android:text="Europe de l'ouest" />
+        android:text="Euro" />
+    <TextView
+        android:id="@+id/jeu_bonus_langages"
+        android:layout_width="100dp"
+        android:layout_height="120dp"        android:layout_weight="1"
+        android:background="@drawable/baseline_square_24"
+        android:gravity="center"
+        android:text="Français" />
+    <TextView
+        android:id="@+id/jeu_bonus_population"
+        android:layout_width="100dp"
+        android:layout_height="120dp"        android:layout_weight="1"
+        android:background="@drawable/baseline_square_24"
+        android:gravity="center"
+        android:text="69000000" />
+    <TextView
+        android:id="@+id/jeu_bonus_area"
+        android:layout_width="100dp"
+        android:layout_height="120dp"        android:layout_weight="1"
+        android:background="@drawable/baseline_square_24"
+        android:gravity="center"
+        android:text="18435604" />
 
 
 </LinearLayout>
