--- a/app/src/main/res/layout/activity_jeu_bonus_reponses.xml
+++ b/app/src/main/res/layout/activity_jeu_bonus_reponses.xml
@@ -14,6 +14,7 @@
         android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="France" />
 
     <TextView
@@ -22,6 +23,7 @@
         android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="Europe" />
 
     <TextView
@@ -30,6 +32,7 @@
         android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="Europe de l'ouest" />
 
     <TextView
@@ -38,6 +41,7 @@
         android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="Paris" />
 
     <TextView
@@ -46,6 +50,7 @@
         android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="Euro" />
     <TextView
         android:id="@+id/jeu_bonus_langages"
@@ -53,6 +58,7 @@
         android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="Français" />
     <TextView
         android:id="@+id/jeu_bonus_population"
@@ -60,6 +66,7 @@
         android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="69000000" />
     <TextView
         android:id="@+id/jeu_bonus_area"
@@ -67,6 +74,7 @@
         android:layout_height="120dp"        android:layout_weight="1"
         android:background="@drawable/baseline_square_24_red"
         android:gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="18435604" />
 
 
