--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,15 @@
         app:layout_constraintTop_toBottomOf="@+id/home_jeubonus_button"
         app:layout_constraintVertical_bias="0.695" />
 
+    <Button
+        android:id="@+id/home_favori_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favori"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_detailspays_button" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
